<resources>
    <string name="app_name">My Application</string>
    <string name="pre_recover">Pre-Recover</string>
    <string name="enter">Вход</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="enter_button">Войти</string>
    <string name="log_up">Зарегестрироваться</string>
    <string name="phone_or_email">Телефон или эл.почта</string>
    <string name="password">Пароль</string>
    <string name="pass_recovery_text_1">Введите телефон или почту которая была использована ранее:</string>
    <string name="pass_recovery_text_2">Ваш аккаунт уже был использован или вы просто забыли пароль?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_">Продолжить</string>
    <string name="choose_reason">Выберите причину регистрации:</string>
    <string name="be_cured">Вылечить свое заболевание</string>
    <string name="look_for_a_patient">Наблюдение за пациентом</string>
    <string name="another">Другое</string>
    <string name="enter_number_of_patient">Введите номер телефона пациента, использованный при регистрации</string>
    <string name="i_agree">Я согласен с Условиями соглашения</string>
    <string name="complete_registration">Пройдите регистрацию</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="enter_the_code">Введите код, который был отправлен вам на</string>
    <string name="didnt_receive_code">Код доступа не был получен?</string>
    <string name="account">Аккаунт</string>
    <string name="patient">Пациент</string>
    <string name="form">Анкета</string>
    <string name="exit">Выход</string>
    <string name="geolocation">Геолокация</string>
    <string name="calendar">Календарь</string>
    <string name="council">Консилиум</string>
    <string name="heal">Лечение</string>
    <string name="medicine">Медицина</string>
    <string name="access_and_control">Доступ и контроль</string>
    <string name="private_information">Личная информация</string>
    <string name="settings">Настройки</string>
    <string name="call">Вызов</string>
    <string name="search">Поиск</string>
    <string name="messages">Сообщения</string>
    <string name="home">Домашний экран</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="resend_code">Отправить код повторно</string>
    <string name="centers">Центры:</string>
    <string name="clinic">Клиника:</string>
    <string name="specialists_of_clinic">Специалисьы клиники</string>
    <string name="methods">Методики для онлайн прохождения/Онлайн методики</string>
    <string name="empty_history">История поиска пуста</string>
</resources>