<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item android:id="@+id/call"-->
<!--        android:title="@string/call"-->
<!--        android:orderInCategory="1"/>-->
    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        android:orderInCategory="3"/>
    <item android:id="@+id/messages"
        android:title="@string/messages"
        android:icon="@drawable/message"
        app:showAsAction="always"
        android:orderInCategory="2"/>
    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="always"
        android:orderInCategory="1"
        tools:ignore="AlwaysShowAction" />
    <item android:id="@+id/empty"
        android:title=""
        android:enabled="false"
        android:orderInCategory="4"/>
</menu>