<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="fragments_auth.LogUpFragment">


    <TextView
        android:id="@+id/tvFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/complete_registration"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linLFirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/gray_border_without_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirst">

        <EditText
            android:id="@+id/editTextPhoneNumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayoutSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/gray_border_without_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linLFirst"
        app:layout_constraintStart_toStartOf="@+id/linLFirst"
        app:layout_constraintTop_toBottomOf="@+id/linLFirst">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/pass_visible"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayoutThird"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/gray_border_without_padding"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linLFirst"
        app:layout_constraintStart_toStartOf="@+id/linLFirst"
        app:layout_constraintTop_toBottomOf="@+id/linLayoutSecond">

        <EditText
            android:id="@+id/editTextTextPasswordSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/pass_visible"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayoutFourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linLayoutThird"
        app:layout_constraintStart_toStartOf="@+id/linLayoutThird"
        app:layout_constraintTop_toBottomOf="@+id/linLayoutThird"
        tools:ignore="MissingConstraints">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="clip_vertical"
            android:scaleX="1.5"
            android:scaleY="1.5"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewIAgree"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/i_agree"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonContinueSecond"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/unactive_button"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linLayoutThird"
        app:layout_constraintStart_toStartOf="@+id/linLayoutThird"
        app:layout_constraintTop_toBottomOf="@+id/linLayoutFourth"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>