<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cLlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/auth_bg"
    tools:context="fragments_main_page.SearchFragment">


    <LinearLayout
        android:id="@+id/clinics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centers">

        <TextView
            android:id="@+id/tvClinics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/clinic"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvClinics"
            android:layout_width="match_parent"
            android:layout_height="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/specialists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clinics">

        <TextView
            android:id="@+id/tvSpecialists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSpecialists"
            android:layout_width="match_parent"
            android:layout_height="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/methods"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialists">

        <TextView
            android:id="@+id/tvMethods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/methods"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethods"
            android:layout_width="match_parent"
            android:layout_height="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/centers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCenters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/centers"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCenters"
            android:layout_width="match_parent"
            android:layout_height="80dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>